--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: milkdromeda_icons
-description: Milkdromeda Open-Source icons
-version: 0.0.1+2
+description: Open-source icons for general use made by Milkdromeda. Provides 100 icons in 2 sets.
+version: 0.0.1+3
 homepage: https://milkdromeda.dev
 repository: https://github.com/milkdromeda-dev/milkdromeda_icons.git
 issue_tracker: https://github.com/milkdromeda-dev/milkdromeda_icons/issues
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
