--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,19 @@
 name: milkdromeda_icons
 description: Open-source icons for general use made by Milkdromeda. Provides 100 icons in 2 sets.
-version: 0.0.1+3
+version: 0.0.1+4
 homepage: https://milkdromeda.dev
 repository: https://github.com/milkdromeda-dev/milkdromeda_icons.git
 issue_tracker: https://github.com/milkdromeda-dev/milkdromeda_icons/issues
+platforms:
+  web:
+  android:
+  ios:
+  windows:
+  linux:
+  macos:
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: '>=3.1.1 <4.0.0'
 
 dependencies:
   flutter:
