--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -36,3 +36,9 @@ flutter:
     - family: MilkdromedaIconsSet2
       fonts:
         - asset: lib/fonts/MilkdromedaIconsSet2.ttf
+    - family: MilkdromedaIconsSet3
+      fonts:
+        - asset: lib/fonts/MilkdromedaIconsSet3.ttf
+    - family: MilkdromedaIconsSet4
+      fonts:
+        - asset: lib/fonts/MilkdromedaIconsSet4.ttf
